sync 6 proyectos
