# APP03022-mrch.backend.somx.util-api/src/routes/security.routes.ts
@@ -3,6 +3,8 @@ import * as securityController from '@/controllers/security.controller.js';
 
 const router = Router();
 
+router.post('/user-utility', securityController.postUserUtilitySession);
+
 router.get('/profile-users', securityController.searchProfileUsers);
 router.get('/profile-modules', securityController.searchProfileModules);
 router.get('/profile-module-processes', securityController.searchProfileModuleProcesses);
